<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"  app:orderingFromXml="true">

	<SwitchPreferenceCompat
		app:key="pref_slow_queries_reset_stats"
		app:layout="@layout/pref_text"
		app:title="@string/pref_slow_queries_reset_stats" />

	<PreferenceCategory
		app:title="@string/pref_category_slow_query_summary"
		app:layout="@layout/pref_category"
		app:singleLineTitle="true">
		<Preference
			app:key="summary_container"
			app:summary="--"
			app:layout="@layout/pref_plain_text">
		</Preference>
	</PreferenceCategory>

	<PreferenceCategory
		app:title="@string/pref_category_slow_queries"
		app:layout="@layout/pref_category"
		app:singleLineTitle="true">
		<Preference
			app:key="query_list_container"
			app:summary="--"
			app:layout="@layout/pref_plain_text">
		</Preference>
	</PreferenceCategory>

</PreferenceScreen>
